--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <ul>
       <li><a href="./Foodmenu.html">Food Menu</a></li>
       <li><a href="./forms.html">Forms</a></li>
-      <li><a href="./Index.html">index</a></li>
+      <li><a href="./index.html">Home</a></li>
     </ul>
    </nav>
 </body>
