--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,9 @@
 <body>
    <nav>
     <ul>
-      <li><a href="./Foodmenu.html">Food Menu</a></li>
+      <li><a href="./foodmenu.html">Food Menu</a></li>
       <li><a href="./forms.html">Forms</a></li>
-      <li><a href="./index.html">Home</a></li>
+      <li><a href="./index.html">index</a></li>
     </ul>
    </nav>
 </body>
