--- a/Foodmenu.html
+++ b/Foodmenu.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
+    <table border="5">
         <thead>
             <tr>
                 <th scope="col">days</th>
